fix(all) : correction css, suppression bande sup, alignement bouton,..

--- a/src/app/mail/mail.scss
+++ b/src/app/mail/mail.scss
@@ -1,7 +1,8 @@
 mail {
+  float: left;
   background-color: #ffffff;
   height: 100vh;
-  width : 65vw;
+  width: 70vw;
   overflow: scroll;
 
   #titre-mail {
@@ -31,10 +32,28 @@ mail {
     float: right;
     width: 80vw;
 
-    #back-to-list-button {
-      display: block;
+    #titre-mail {
+      font-size : 20px;
     }
 
+    #details-mail {
+      font-size: 16px;
+    }
+
+    #body, #date-creation{
+      font-size : 14px;
+    }
+
+    #back-to-list-button {
+      display: block;
+      margin: auto;
+      font-size: 13px;
+    }
+
+    .glyph {
+      float : left;
+      margin: 0 2px;
+    }
   }
 }
 
